fix header break on intermediate viewport

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 header {
   padding-top: 0.25em;
@@ -8,15 +8,15 @@ header {
   }
 }
 
-
 .header {
-
-  // overflow: auto;
   position: fixed;
-  box-shadow: 2px 0 10px rgba(0,0,0,.2);
+  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
   width: 100%;
   background-color: white;
   z-index: 9;
+
+  display: flex;
+  justify-content: space-between;
 
   .logo {
     background-color: none;
@@ -54,12 +54,9 @@ header {
     font-size: 1.125em;
     float: right;
     list-style-type: none;
-    // margin: 0;
     padding: 0;
-    // width: 40%;
     display: inline-flex;
     margin-right: 1em;
-
 
     @include mobile {
       font-size: 1em;
@@ -85,16 +82,15 @@ header {
         color: #212121;
       }
       &:hover {
-        color: #E6141B;
+        color: #e6141b;
       }
       &:focus {
-        color: #E6141B;
+        color: #e6141b;
       }
       &:active {
         color: #212121;
       }
     }
-
 
     li {
       text-transform: uppercase;
@@ -103,14 +99,13 @@ header {
       padding-left: 1em;
       padding-right: 1em;
 
-
       &:nth-child(3) a {
         background-color: #212121;
         color: white;
         padding: 8px 25px;
         border-radius: 100px;
         &:hover {
-          background-color: #E6141B;
+          background-color: #e6141b;
         }
       }
     }
@@ -118,16 +113,14 @@ header {
 
   .work {
     font-weight: 100;
-    margin: 1em;
+    margin-left: 1em;
     display: -webkit-inline-box;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 24px;
-    color: #E6141B;
-    // padding-top: 24px;
-    // padding-bottom: 24px;
+    color: #e6141b;
 
-    @include mobile {
+    @media screen and (max-width: 915px) {
       display: none;
     }
 
@@ -136,6 +129,4 @@ header {
       color: #212121;
     }
   }
-
-
 }
