--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,7 @@ $black: rgb(33, 33, 33);
 $white: rgb(255, 255, 255);
 $grey: rgb(234, 234, 234);
 $black: rgb(2, 14, 15);
-$tablet-width: 620px;
+$tablet-width: 760px;
 $mobile-width: 420px;
 
 @mixin tablet {
